# neurocorrelator

./: .dvcignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  client_secret_1021463937122_v711ll5aah5advoevq80rgvlhtlt1len_apps.json  data.dvc  dvc.yaml  pyproject.toml  qatm.py  train.py
.dvc/: config
configs/: main.yaml
configs/data/: dataset.yaml
configs/infer/: qatm.yaml
configs/logging/: mlflow.yaml
configs/model/: vgg.yaml
configs/train/: params.yaml
result/: boxes.csv
src/neurocorrelator/: data.py  default_config.py  featex.py  logger.py  qatm_pytorch.py  train_module.py  utils.py
